--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4781,6 +4781,7 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
   width: 100%;
   height: 100%;
+  max-height: calc(100vh - 160px);
 }
 
 .ph3-img-col {
